--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <select id="difficulty" class="dropdown">
                 <option value="1">Facile (2 couleurs, 4 disponibles)</option>
                 <option value="2">Moyen (4 couleurs, 8 disponibles)</option>
-                <option value="3" selected>Difficile (4 couleurs, doublons autorisés)</option>
+                <option value="3">Difficile (4 couleurs, doublons autorisés)</option>
             </select>
         </div>
 
